<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.main.MainFragment">

    <!-- Empty TaskList -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_task"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtNoTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/no_task"
                android:textAppearance="@style/RecycleViewTheme" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Populated View -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <!-- Progress Info -->
        <androidx.cardview.widget.CardView
            android:id="@+id/progressCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="9dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAppearance="@style/RecycleViewTheme"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/done"
                    android:textAppearance="@style/RecycleViewTheme"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <com.warkiz.widget.IndicatorStayLayout
                    android:id="@+id/progressIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtDone">

                    <com.warkiz.widget.IndicatorSeekBar
                        android:id="@+id/progressSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:isb_indicator_color="@color/colorPrimary"
                        app:isb_indicator_text_size="@dimen/font_size_progress_indicator"
                        app:isb_show_indicator="rectangle"
                        app:isb_show_tick_texts="false"
                        app:isb_thumb_drawable="@drawable/thumb"
                        app:isb_track_progress_color="@color/colorPrimary"
                        app:isb_user_seekable="false" />
                </com.warkiz.widget.IndicatorStayLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <!-- RecycleView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/taskRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:clipToPadding="false"
            android:paddingBottom="?attr/actionBarSize"
            app:layout_constraintTop_toBottomOf="@+id/progressCardView"
            tools:listitem="@layout/task_entry" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Add New task -->
    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:id="@+id/dial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_corner"
        android:elevation="5dp"
        android:orientation="vertical"
        android:outlineProvider="bounds"
        android:padding="8dp"
        android:visibility="invisible"
        app:layout_anchor="@id/addFab"
        app:layout_anchorGravity="top|center_horizontal"
        app:layout_behavior="com.google.android.material.transformation.FabTransformationSheetBehavior">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieCheck"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="false"
            app:lottie_fileName="check.json"
            app:lottie_loop="false"
            app:lottie_speed="1.25" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/task_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/task_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/btnLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/grey"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/add_task" />
        </RelativeLayout>
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        app:srcCompat="@drawable/ic_add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
